# pyvista

./: .aider.chat.history.md  .aider.input.history  .all-contributorsrc  .codacy.yml  .codeclimate.yml  .codespellrc  .coveragerc  .dockerignore  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitignore_checkpoint_note  .gitpod.yml  .isort.cfg  .mailmap  .pep8speaks.yml  .pre-commit-config.yaml  .travis.yml  2.0.0b1  =2.0.0rc1  AUTHORS.rst  BUGS  CITATION.cff  CITATION.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  CONTRIBUTORS.md  CONTRIBUTORS.rst  Dockerfile  FUNDING.yml  FullHead.mhd  ImageActorStressed.py  LICENSE  MANIFEST.in  Makefile  MultipleUpdateExtents.py  NOTES  NetCDFReader.py  (+59 more)
.aider.tags.cache.v4/: cache.db
.appveyor/: install_opengl.ps1
.ci/: checkout.yml  environment-azure.yml  macos-install-python.sh  pyvista_test.py  setup_headless_display.sh
.devcontainer/: devcontainer.json  oncreatecommand.sh  postcreatecommand.sh
.devcontainer/offscreen/: devcontainer.json  oncreatecommand.sh
.devcontainer/osmesa/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  RUNNERS.md  auto-merge.yml  dependabot.yml  labeler.yml  path-filters.yml  release.yml  zizmor.yml
.github/DISCUSSION_TEMPLATE/: general.yml  ideas.yml  q-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug-report.md  bug-report.yml  config.yml  feature-request.md  feature-request.yml  linkcheck_report.md  maintenance-request.md  maintenance-request.yml
.github/schemas/: context7.json
.github/workflows/: auto-approve-dependabot.yml  auto-approve.yml  auto-merge-dependabot.yml  auto-merge.yml  cache-pyvista-data.yml  cache-vtk-data.yml  codecov.yml  codeql-analysis.yml  community-review.yml  dependency-conflicts.yml  docker-package.yml  docs-deploy.yml  docs-sh.yml  docs.yml  githubaction-update-pull-request.yml  greetings.yml  integration-tests.yml  intersphinx-update-pull-request.yml  label.yml  linkcheck.yml  lock.yml  merge-me.yml  netlify-deploy.yml  patch.yml  pre-commit-update.yml  preview-docs.yml  preview_pull_request.yml  preview_pull_request2.yml  preview_pull_request3.yml  publish_docker.yml  python-syntax.yml  pythonpackage.yml  release.yml  required-labels.yml  style-docstring.yml  style_docstr.yml  test-image-report-deploy.yml  testing-and-deployment.yml  testing-gpu.yml  tests.yml  (+6 more)
Data/: can.vtu
doc/: .vale.ini  Makefile  README.md  conf.py  index.rst  make_chart_style_tables.py  make_dev_wheel.py  make_external_gallery.py  make_tables.py  print_errors.py  pyvista-binder-config.yml
doc/_static/: no_search_highlight.css  summary.css  tables.css
doc/_templates/: custom-class-template.rst  custom-module-template.rst  sidebar-nav-bs.html  sponsor.html
doc/api/: index.rst
docker/: Dockerfile  README.md  dev-gitpod.Dockerfile  dev.Dockdrfile  dev.Dockerfile  docs.Dockerfile  jupyter.Dockerfile  requirements.txt  slim.Dockerfile
docker_dev/: Dockerfile  README.md  build.sh  environment.yml  labextensions.txt
docs/: Makefile  README.md  about.rst  ads.txt  api.rst  authors.rst  building_vtk.rst  common.rst  composite.rst  conf.py  deploy.sh  deploy_docs_from_travis.sh  examples.py  examples.rst  external_examples.rst  grids.rst  index.rst  installation.rst  make_external_gallery.py  optional_features.rst  overview.rst  plane.vtk  polydata.rst  pyvista-binder-config.yml  qt_plotting.rst  triangle_mesh_linear.vtk  vista-binder-config.yml  vtki-binder-config.yml  why.rst
examples/: .gitignore  README.rst  README.txt  ruff.toml  test.py
examples_flask/: app.py
examples_trame/: PyVistaLocalView.py  PyVistaRemoteView.py  UITemplate.py  colormaps.py  local_view.py  requirements.txt
hooks/: warnings.py
joss/: paper.bib  paper.md  ref.bib
notebooks/: Background-Plotting.ipynb  Examples.ipynb  Filters.ipynb  Overview.ipynb  Scalar-Bar-Preservation.ipynb  Texture.ipynb
pyvista/: __init__.py  __main__.py  _constants.py  _deprecate_positional_args.py  _overrides.py  _plot.py  _typing.py  _version.py  _vtk.py  _vtk_core.py  _vtki.py  _warn_external.py  colors.py  common.py  composite.py  conftest.py  container.py  errors.py  export.py  features.py  fileio.py  filters.py  geometric_objects.py  grid.py  index.html  ipy_tools.py  parametric_geometry.py  parametric_objects.py  plot_tools.py  plotting.py  pointset.py  py.typed  readers.py  renderer.py  report.py  sphinx_gallery.py  themes.py  utilities.py
pyvista-agnostic/: pyproject.toml
pyvista-no-vtk/: pyproject.toml
scripts/: run_pre_commit_mypy.py
tests/: .test_geometric_objects.py.swp  TestCompositeWriterReader.py  TestFLUENTCFFReader.py  check_doctest_names.py  check_example_coverage.py  conftest.py  generate_test_image_report.py  room.dat.h5  test_actor.py  test_attributes.py  test_axes.py  test_boolean_intersection.py  test_camera.py  test_cells.py  test_charts.py  test_cli.py  test_colors.py  test_common.py  test_composite.py  test_composite_mapper.py  test_composite_writer_reader.py  test_conftest.py  test_container.py  test_create_no_copy.py  test_cube_axes_actor.py  test_dataobject.py  test_dataset.py  test_datasetattributes.py  test_demos.py  test_docs.py  test_download_files.py  test_downloads.py  test_examples.py  test_export.py  test_features.py  test_filters.py  test_frd.py  test_geometric_objects.py  test_grid.py  test_helpers.py  (+45 more)
vista/: __init__.py  _version.py  common.py  container.py  errors.py  features.py  filters.py  grid.py  ipy_tools.py  pointset.py  qt_plotting.py  readers.py  renderer.py  sphinx_gallery.py  utilities.py
vtkInterface/: __init__.py  _version.py  colors.py  common.py  geometric_objects.py  grid.py  plotting.py  polydata.py  utilities.py
vtki/: __init__.py  _version.py  colors.py  common.py  container.py  errors.py  export.py  features.py  filters.py  geometric_objects.py  grid.py  ipy_tools.py  plot_tools.py  plotting.py  pointset.py  polydata.py  qt_plotting.py  readers.py  renderer.py  sphinx_gallery.py  utilities.py
wiki/: 2026-06-30-linkcheck-8754.md  2026-06-30-plotter-doc-kwargs.md  INDEX.md
(+1368 files in other folders)
